Revert "fixed verticle text alignment and work together hitbox"
This reverts commit 3a33f14d0b2e997528eb819b43d17db4163102df.

--- a/css/main.css
+++ b/css/main.css
@@ -414,7 +414,7 @@ hr {
   display: inline;
   float: right;
   margin-right: 10px;
-  margin-top: 140px;
+  margin-top: 35px;
 }
 
 #fatcat {
@@ -429,10 +429,7 @@ hr {
 }
 
 #worktogether {
-  display: inline-block;
   margin-top: 125px;
-  width: 300px;
-  height: 40px;
 }
 
 
